apps/prod/financefollower/api/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: financefollower-api
  labels:
    app.kubernetes.io/name: financefollower-api
    app.kubernetes.io/part-of: financefollower
    talay.io/environment: prod
spec:
  ingressClassName: traefik
  tls:
    - secretName: financefollower-api-tls
      hosts:
        - api.vita-pick.com
        - www.api.vita-pick.com
  rules:
    - host: api.vita-pick.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: financefollower-api
                port:
                  number: 80
    - host: www.api.vita-pick.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: financefollower-api
                port:
                  number: 80
